--- a/appinfo.json
+++ b/appinfo.json
@@ -3,7 +3,7 @@
     "capabilities": [
         ""
     ],
-    "companyName": "maxim.vandewynckel@gmail.com",
+    "companyName": "MVdW Software",
     "longName": "BETransport",
     "projectType": "pebblejs",
     "resources": {
